update doctors list and images

--- a/doctors.html
+++ b/doctors.html
@@ -182,7 +182,7 @@
       <h2 id="modalName" class="text-xl font-semibold text-center"></h2>
       <p id="modalSpecialty" class="text-green-600 font-medium text-center"></p>
       <p id="modalRoom" class="mt-3 font-semibold text-center"></p>
-      <p id="modalSchedule" class="text-sm text-gray-700 text-center"></p>
+      <p id="modalSchedule" class="text-sm font-semibold text-gray-700 text-center"></p>
 
       <p id="modalHmo" class="mt-3 mb-4 text-sm text-gray-700 text-center font-semibold font-lg"></p>
     </div>
