--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
                 <div class="p-6 text-center">
-                  <img src="src/img/doctors/dr_quadra.avif" fetchpriority="low" loading="lazy" alt="Dr. Sofia Lim" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+                  <img src="src/img/doctors/dr_john_quadra.avif" fetchpriority="low" loading="lazy" alt="Dr. Sofia Lim" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
                   <!-- Doctor Info -->
                   <h3 class="text-md font-semibold text-black font-roboto mb-2">Dr. John Christopher Quadra</h3>
                   <p class="text-md text-[#249f51] font-medium">Internal Medicine</p>
@@ -748,7 +748,7 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="src/img/doctors/dr_dianne.avif" fetchpriority="low" loading="lazy" alt="Dr. Dianne Riambon" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+            <img src="src/img/doctors/dr_dianne_millado-riambon.avif" fetchpriority="low" loading="lazy" alt="Dr. Dianne Riambon" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
             <!-- Doctor Info -->
             <h3 class="text-md font-semibold text-black font-roboto mb-2">Dr. Dianne Millado-Riambon</h3>
             <p class="text-md text-[#249f51] font-medium">Pediatric Pulmonary & Critical Care Medicine Specialist</p>
@@ -775,7 +775,7 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
                 <div class="p-6 text-center">
-                  <img src="src/img/doctors/dr_nijell.avif" fetchpriority="low" loading="lazy" alt="Dr. Nijell Pizarro" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+                  <img src="src/img/doctors/dr_nijell_bangasan-pizarro.avif" fetchpriority="low" loading="lazy" alt="Dr. Nijell Pizarro" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
                   <!-- Doctor Info -->
                   <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Nijell Bangasan-Pizarro</h3>
                   <p class="text-md text-[#249f51] font-medium mb-3">Internal Medicine</p>
@@ -802,7 +802,7 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="src/img/doctors/dr_jonas.avif" fetchpriority="low" loading="lazy" alt="Dr. Jonas Claro Cauton" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+            <img src="src/img/doctors/dr_jonas_cauton.avif" fetchpriority="low" loading="lazy" alt="Dr. Jonas Claro Cauton" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
             <!-- Doctor Info -->
             <h3 class="text-xl font-semibold text-black font-roboto mb-2">Dr. Jonas Claro Cauton</h3>
             <p class="text-md text-[#249f51] font-medium mb-3">Rehabilitation Medicine</p>
@@ -829,7 +829,7 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
                 <div class="p-6 text-center">
-                  <img src="src/img/doctors/dr_miko.avif" fetchpriority="low" loading="lazy" alt="Dr. Miko Galut" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+                  <img src="src/img/doctors/dr_miguel_galut.avif" fetchpriority="low" loading="lazy" alt="Dr. Miko Galut" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
                   <!-- Doctor Info -->
                   <h3 class="text-xl font-semibold text-black font-roboto mb-2">Dr. Miko Galut</h3>
                   <p class="text-md text-[#249f51] font-medium mb-3">Urologic Surgery</p>
@@ -863,7 +863,7 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="src/img/doctors/dr_frances.avif" fetchpriority="low" loading="lazy"  alt="Dr. Frances Obrero-Artajos" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+            <img src="src/img/doctors/dr_frances_obrero-artajos.avif" fetchpriority="low" loading="lazy"  alt="Dr. Frances Obrero-Artajos" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
             <!-- Doctor Info -->
             <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Frances Obrero-Artajos</h3>
             <p class="text-md text-[#249f51] font-medium">Internal Medicine</p>
@@ -890,7 +890,7 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
                 <div class="p-6 text-center">
-                  <img src="src/img/doctors/dr_marga.avif" fetchpriority="low" loading="lazy"  alt="Dr. Margarita Cobangco" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+                  <img src="src/img/doctors/dr_margarita_cobangco.avif" fetchpriority="low" loading="lazy"  alt="Dr. Margarita Cobangco" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
                   <!-- Doctor Info -->
                   <h3 class="text-xl font-semibold text-black font-roboto mb-2">Dr. Margarita Cobangco</h3>
                   <p class="text-md text-[#249f51] font-medium mb-3">General Surgery</p>
@@ -917,7 +917,7 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="src/img/doctors/dr_benjamin.avif" fetchpriority="low" loading="lazy"  alt="Dr. Benjamin Tolentino III" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+            <img src="src/img/doctors/dr_benjamin_tolentino.avif" fetchpriority="low" loading="lazy"  alt="Dr. Benjamin Tolentino III" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
             <!-- Doctor Info -->
             <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Benjamin Tolentino III</h3>
             <p class="text-md text-[#249f51] font-medium mb-3">General Surgery</p>
@@ -944,7 +944,7 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="src/img/doctors/dr_jonah.avif" fetchpriority="low" loading="lazy" alt="Dr. Jonah Lyn" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+            <img src="src/img/doctors/dr_jonah_toribio.avif" fetchpriority="low" loading="lazy" alt="Dr. Jonah Lyn" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
             <!-- Doctor Info -->
             <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Jonah Lyn Toribio</h3>
             <p class="text-md text-[#249f51] font-medium mb-3">General Surgery</p>
@@ -971,7 +971,7 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="src/img/doctors/dr_xyrose.avif" fetchpriority="low" loading="lazy"  alt="Dr. Xyrose Lex-Deo Andres" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+            <img src="src/img/doctors/dr_xyrose_andres.avif" fetchpriority="low" loading="lazy"  alt="Dr. Xyrose Lex-Deo Andres" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
             <!-- Doctor Info -->
             <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Xyrose Lex-Deo Andres</h3>
             <p class="text-md text-[#249f51] font-medium">Ear, Nose, Throat</p>
@@ -998,7 +998,7 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="src/img/doctors/dr_cuanang.avif" fetchpriority="low" loading="lazy"  alt="Dr. Dr. Domingo Cuanang III" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+            <img src="src/img/doctors/dr_domingo_cuanang.avif" fetchpriority="low" loading="lazy"  alt="Dr. Dr. Domingo Cuanang III" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
             <!-- Doctor Info -->
             <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Domingo Cuanang III</h3>
             <p class="text-md text-[#249f51] font-medium mb-3">Radiation Oncology</p>
@@ -1025,9 +1025,9 @@
         <!-- Doctor 8 -->
         <div class="bg-gray-50 shadow-md rounded-xl hover:shadow-lg transform hover:scale-105 transition duration-300" data-aos="fade-up" data-aos-delay="550">
           <div class="p-6 text-center">
-            <img src="src/img/doctors/dr_marvin.avif" fetchpriority="low" loading="lazy"  alt="Dr. Marvin Riambon" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
+            <img src="src/img/doctors/dr_marvin_riambon.avif" fetchpriority="low" loading="lazy"  alt="Dr. Marvin Riambon" class="w-50 h-50 rounded-full mx-auto mb-4 object-cover">
             <!-- Doctor Info -->
-            <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Marvin Riambon</h3>
+            <h3 class="text-lg font-semibold text-black font-roboto mb-2">Dr. Marvin M. Riambon</h3>
             <p class="text-md text-[#249f51] font-medium">Internal Medicine</p>
             <p class="text-md text-[#249f51] font-medium mb-3">Adult Cardiology</p>
             <!-- Clinic Hours -->
