update facilities page

--- a/facilities.html
+++ b/facilities.html
@@ -217,7 +217,7 @@
             <img 
               id="currentImage" 
               src="" 
-              class="w-full max-h-[60vh] object-contain rounded mx-auto"
+              class="w-full max-h-auto object-contain rounded mx-auto"
             />
             <button id="prevImage" class="absolute top-1/2 left-2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full text-lg">&#10094;</button>
             <button id="nextImage" class="absolute top-1/2 right-2 transform -translate-y-1/2 bg-black bg-opacity-50 text-white px-3 py-1 rounded-full text-lg">&#10095;</button>
