--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
           <li><a href="/doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">Doctors</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-[#04813b]">About Us</a></li>
           <li class="flex flex-wrap gap-4">
-            <a href="http://labresult.metroviganhospital.com/" target="_blank" class="lg:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
-            <a href="#contact" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
+            <a href="http://labresult.metroviganhospital.com/" target="_blank" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
+            <a href="#contact" class="lg:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
           </li>
         </ul>
       </div>
@@ -1564,7 +1564,7 @@
           <li><a href="/doctors" class="hover:text-[#04813b] transition">Our Doctors</a></li>
           <li><a href="/about-us" class="hover:text-[#04813b] transition">About Us</a></li>
           <li><a href="/careers" class="hover:text-[#04813b] transition">Careers</a></li>
-          <li><a href="http://www.labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
+          <li><a href="http://labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
           <li><a href="index.html#contact" class="hover:text-[#04813b] transition">Contact Us</a></li>
         </ul>
       </div>
