update services page

--- a/about-us.html
+++ b/about-us.html
@@ -33,7 +33,7 @@
 
   <link rel="icon" href="src/img/logo/favicon.ico" type="image/x-icon">
 
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
   <script src="https://cdn.tailwindcss.com"></script>
@@ -175,87 +175,133 @@
           </p>    
     </div>
         
-      <!-- Departments -->
-      <div class="mt-20 space-y-6 text-gray-700" data-aos="fade-up" data-aos-delay="200">
-        <h3 class="text-2xl font-semibold text-green-700 mb-6 text-center">Departments & Specializations</h3>
-  
-        <div class="divide-y divide-gray-200 border rounded-xl overflow-hidden shadow-sm">
-          <!-- Surgery -->
-          <div class="flex items-start gap-4 p-6 hover:bg-gray-50 transition">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-green-700 flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"/>
-            </svg>
-            <p><strong>SURGERY:</strong> Manned by highly competent teams, with 3 operation suites equipped for general surgery, orthopedics, neurosurgery, urology, and reconstructive surgery.</p>
-          </div>
-  
-          <!-- Medicine -->
-          <div class="flex items-start gap-4 p-6 hover:bg-gray-50 transition">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-green-700 flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zM2 12h2m16 0h2m-9 9v2m0-20v2"/>
-            </svg>
-            <p><strong>MEDICINE:</strong> Staffed by skilled physicians and subspecialists in cardiology, pulmonology, oncology, nephrology, and more. ICU features cardiac monitoring and ventilators.</p>
-          </div>
-  
-          <!-- Pediatrics -->
-          <div class="flex items-start gap-4 p-6 hover:bg-gray-50 transition">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-green-700 flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-3-3v6m-9 8V5a2 2 0 012-2h14a2 2 0 012 2v14a2 2 0 01-2 2H5a2 2 0 01-2-2z"/>
-            </svg>
-            <p><strong>PEDIATRICS:</strong> NICU with modern incubators and facilities to care for up to 10 neonates.</p>
-          </div>
-  
-          <!-- OB-GYN -->
-          <div class="flex items-start gap-4 p-6 hover:bg-gray-50 transition">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-green-700 flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8c-1.657 0-3 1.343-3 3s1.343 3 3 3 3-1.343 3-3-1.343-3-3-3z"/><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2v2m0 16v2m10-10h-2M4 12H2"/>
-            </svg>
-            <p><strong>OBSTETRICS & GYNECOLOGY:</strong> Fetal monitoring and high-resolution ultrasound for high-risk pregnancies, plus gynecologic oncology care.</p>
-          </div>
-  
-          <!-- Radiology -->
-          <div class="flex items-start gap-4 p-6 hover:bg-gray-50 transition">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-green-700 flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12h2a3 3 0 110 6h-2m-6-6H7a3 3 0 100 6h2m1-9V5a2 2 0 012-2h2a2 2 0 012 2v4"/>
-            </svg>
-            <p><strong>RADIOLOGY:</strong> Equipped with ultrasound, CT scan, mammography, and X-ray for advanced diagnostics.</p>
-          </div>
-  
-          <!-- Laboratory -->
-          <div class="flex items-start gap-4 p-6 hover:bg-gray-50 transition">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-green-700 flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v9a2 2 0 002 2z"/>
-            </svg>
-            <p><strong>LABORATORY:</strong> Modern hematology, blood chemistry analyzers, microbiology, and soon anatomic pathology.</p>
-          </div>
-  
-          <!-- Ophthalmology -->
-          <div class="flex items-start gap-4 p-6 hover:bg-gray-50 transition">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-green-700 flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2a10 10 0 100 20 10 10 0 000-20z"/>
-            </svg>
-            <p><strong>OPHTHALMOLOGY & ENT:</strong> Eye care, cataract and glaucoma surgeries, ENT consultations, and audiometry services.</p>
-          </div>
-  
-          <!-- Endoscopy -->
-          <div class="flex items-start gap-4 p-6 hover:bg-gray-50 transition">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-green-700 flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12h6m-6 4h4m-6-8h8M3 6h6M3 10h6m-6 4h6M3 18h6"/>
-            </svg>
-            <p><strong>ENDOSCOPY:</strong> Gastroscopy, bronchoscopy, esophagoscopy, and colonoscopy services by expert physicians.</p>
-          </div>
-  
-          <!-- Anesthesia -->
-          <div class="flex items-start gap-4 p-6 hover:bg-gray-50 transition">
-            <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7 text-green-700 flex-shrink-0 mt-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-3-3v6m-9 8V5a2 2 0 012-2h14a2 2 0 012 2v14a2 2 0 01-2 2H5a2 2 0 01-2-2z"/>
-            </svg>
-            <p><strong>ANESTHESIA:</strong> Trained anesthesiologists with modern anesthesia machines and expertise in pain management.</p>
-          </div>
-        </div>
-      </div>
+    
     </div>
   </section>
   
+    <!-- Comprehensive Healthcare Section -->
+<section class="py-16 bg-gradient-to-b from-white to-gray-50">
+  <div class="max-w-7xl mx-auto px-6">
+    <div class="text-center mb-12">
+      <h2 class="text-3xl sm:text-4xl font-extrabold text-gray-800">Comprehensive Healthcare</h2>
+      <p class="text-gray-600 mt-4 max-w-2xl mx-auto text-lg">
+        Our hospital offers a wide range of specialized and general services to ensure quality care for every patient.
+      </p>
+    </div>
+
+    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
+
+      <!-- Trauma Surgery -->
+      <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+        <div class="w-12 h-12 flex items-center justify-center rounded-full bg-blue-100 text-blue-600 mb-4">
+          <i class="fas fa-procedures text-xl"></i>
+        </div>
+        <h3 class="font-semibold text-lg text-gray-800 mb-2">Trauma, General Surgery & Laparoscopic Surgery</h3>
+        <p class="text-gray-600 text-sm">Advanced surgical care with minimally invasive options for faster recovery.</p>
+      </div>
+
+      <!-- Obstetrics & Gynecology -->
+      <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+        <div class="w-12 h-12 flex items-center justify-center rounded-full bg-pink-100 text-pink-600 mb-4">
+          <i class="fas fa-baby text-xl"></i>
+        </div>
+        <h3 class="font-semibold text-lg text-gray-800 mb-2">Obstetrics & Gynecology</h3>
+        <p class="text-gray-600 text-sm">Comprehensive women's health services from prenatal care to delivery.</p>
+      </div>
+
+      <!-- Internal Medicine -->
+      <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+        <div class="w-12 h-12 flex items-center justify-center rounded-full bg-green-100 text-green-600 mb-4">
+          <i class="fas fa-stethoscope text-xl"></i>
+        </div>
+        <h3 class="font-semibold text-lg text-gray-800 mb-2">Internal Medicine</h3>
+        <p class="text-gray-600 text-sm">Expert diagnosis and treatment for a wide range of adult health conditions.</p>
+      </div>
+
+      <!-- Pediatrics -->
+      <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+        <div class="w-12 h-12 flex items-center justify-center rounded-full bg-yellow-100 text-yellow-600 mb-4">
+          <i class="fas fa-child text-xl"></i>
+        </div>
+        <h3 class="font-semibold text-lg text-gray-800 mb-2">Pediatrics</h3>
+        <p class="text-gray-600 text-sm">Comprehensive healthcare for infants, children, and adolescents.</p>
+      </div>
+
+      <!-- ENT -->
+      <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+        <div class="w-12 h-12 flex items-center justify-center rounded-full bg-purple-100 text-purple-600 mb-4">
+          <i class="fas fa-deaf text-xl"></i>
+        </div>
+        <h3 class="font-semibold text-lg text-gray-800 mb-2">Ear, Nose & Throat (ENT)</h3>
+        <p class="text-gray-600 text-sm">Specialized care for hearing, sinus, and throat conditions.</p>
+      </div>
+
+      <!-- Orthopedics -->
+      <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+        <div class="w-12 h-12 flex items-center justify-center rounded-full bg-red-100 text-red-600 mb-4">
+          <i class="fas fa-bone text-xl"></i>
+        </div>
+        <h3 class="font-semibold text-lg text-gray-800 mb-2">Orthopedic Surgery</h3>
+        <p class="text-gray-600 text-sm">Treatment for bone, joint, and muscle injuries and conditions.</p>
+      </div>
+
+      <!-- Cardiology -->
+      <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+        <div class="w-12 h-12 flex items-center justify-center rounded-full bg-teal-100 text-teal-600 mb-4">
+          <i class="fas fa-heartbeat text-xl"></i>
+        </div>
+        <h3 class="font-semibold text-lg text-gray-800 mb-2">Cardiology</h3>
+        <p class="text-gray-600 text-sm">Comprehensive heart health diagnostics and treatments.</p>
+      </div>
+
+      <!-- Neurology -->
+      <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+        <div class="w-12 h-12 flex items-center justify-center rounded-full bg-indigo-100 text-indigo-600 mb-4">
+          <i class="fas fa-brain text-xl"></i>
+        </div>
+        <h3 class="font-semibold text-lg text-gray-800 mb-2">Neurology</h3>
+        <p class="text-gray-600 text-sm">Expert diagnosis and management of brain and nervous system disorders.</p>
+      </div>
+
+      <!-- Dermatology -->
+      <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+        <div class="w-12 h-12 flex items-center justify-center rounded-full bg-orange-100 text-orange-600 mb-4">
+          <i class="fas fa-allergies text-xl"></i>
+        </div>
+        <h3 class="font-semibold text-lg text-gray-800 mb-2">Dermatology</h3>
+        <p class="text-gray-600 text-sm">Care for skin conditions, cosmetic treatments, and skin cancer screening.</p>
+      </div>
+
+      <!-- Radiology -->
+      <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+        <div class="w-12 h-12 flex items-center justify-center rounded-full bg-gray-200 text-gray-700 mb-4">
+          <i class="fas fa-x-ray text-xl"></i>
+        </div>
+        <h3 class="font-semibold text-lg text-gray-800 mb-2">Radiology</h3>
+        <p class="text-gray-600 text-sm">Advanced imaging services including X-ray, ultrasound, and CT scan.</p>
+      </div>
+
+      <!-- Mammography -->
+      <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+        <div class="w-12 h-12 flex items-center justify-center rounded-full bg-pink-200 text-pink-700 mb-4">
+          <i class="fas fa-ribbon text-xl"></i>
+        </div>
+        <h3 class="font-semibold text-lg text-gray-800 mb-2">Mammography</h3>
+        <p class="text-gray-600 text-sm">The only mammography service in Ilocos Sur for early breast cancer detection.</p>
+      </div>
+
+      <!-- Pharmacy -->
+      <div class="bg-white border border-gray-100 p-6 rounded-2xl shadow-md hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
+        <div class="w-12 h-12 flex items-center justify-center rounded-full bg-lime-100 text-lime-600 mb-4">
+          <i class="fas fa-pills text-xl"></i>
+        </div>
+        <h3 class="font-semibold text-lg text-gray-800 mb-2">Pharmacy</h3>
+        <p class="text-gray-600 text-sm">A complete range of prescription medicines and healthcare products.</p>
+      </div>
+
+    </div>
+  </div>
+</section>
 
 <!-- BOARD OF DIRECTORS & MANAGEMENT -->
 <section class="py-16 bg-gray-50">
