--- a/doctors.html
+++ b/doctors.html
@@ -31,6 +31,7 @@
   <!-- icons & stylesheet -->
   <link rel="stylesheet" href="src/css/style.css">
 
+  <script src="src/js/doctors.js"></script>
   <link rel="icon" href="src/img/logo/favicon.ico" type="image/x-icon">
 
 
@@ -297,7 +298,7 @@
     </div>
   </footer>
 
-  <script src="src/js/doctors.js"></script>
+  <!-- <script src="src/js/doctors.js"></script> -->
 
 
 <!-- icons / css -->
