--- a/doctors.html
+++ b/doctors.html
@@ -32,6 +32,7 @@
   <link rel="stylesheet" href="src/css/style.css">
 
   <script src="src/js/doctors.js"></script>
+
   <link rel="icon" href="src/img/logo/favicon.ico" type="image/x-icon">
 
 
@@ -138,7 +139,7 @@
           <li><a href="/doctors" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700 decoration-green-700 underline underline-offset-[0.425rem]">Doctors</a></li>
           <li><a href="/about-us" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
           <li class="flex flex-wrap gap-4">
-            <a href="http://labresult.metroviganhospital.com/" target="_blank" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
+            <a href="https://labresult.metroviganhospital.com/" target="_blank" class="block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Lab Results</a>
             <a href="index.html#contact" class="lg:hidden block w-full text-center text-white rounded-md bg-[#16a94c] hover:bg-[#04813b] px-6 py-2">Contact Us</a>
           </li>
         </ul>
@@ -218,7 +219,7 @@
           <li><a href="/doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
           <li><a href="/about-us" class="hover:text-green-600 transition">About Us</a></li>
           <li><a href="/careers" class="hover:text-green-600 transition">Careers</a></li>
-          <li><a href="http://labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
+          <li><a href="https://labresult.metroviganhospital.com/" target="_blank" class="hover:text-[#04813b] transition">Lab Results</a></li>
           <li><a href="index.html#contact" class="hover:text-[#04813b] transition">Contact Us</a></li>
         </ul>
       </div>
