doctors page update

--- a/doctors.html
+++ b/doctors.html
@@ -190,7 +190,7 @@
     </section>
 
     <!-- DOCTORS GRID -->
-    <section class="max-w-7xl mx-auto px-6 mt-12" data-aos="fade-up" data-aos-delay="500">
+    <section class="max-w-7xl mx-auto px-6 mt-12">
       <div id="doctorsGrid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6"></div>
       <div class="text-center mt-6">
         <button id="loadMore" class="bg-green-600 hover:bg-green-700 text-white px-6 py-2 rounded-lg">Load More</button>
