add back to top

--- a/about-us.html
+++ b/about-us.html
@@ -423,40 +423,72 @@
 
       <!-- Bottom: HMO Accredited Partners -->
       <div data-aos="fade-up" data-aos-delay="100">
-        <h3 class="text-3xl font-semibold text-center text-[#04813b] mb-6">Accreditations</h3>
+        <h3 class="text-3xl font-semibold text-center text-[#04813b] mb-10">Accreditations <span class="text-gray-800">&</span> Certifications</h3>
         
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-10">
           <!-- HMO 1 -->
           <div class="flex justify-center">
-            <img src="img/hmo/maxicare.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+            <img src="img/hmo/etiqa.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
           </div>
           <!-- HMO 2 -->
           <div class="flex justify-center">
-            <img src="img/hmo/Med.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+            <img src="img/hmo/cocolife.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
           </div>
           <!-- HMO 3 -->
           <div class="flex justify-center">
-            <img src="img/hmo/intellicare.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+            <img src="img/hmo/eastwest.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
           </div>
           <!-- HMO 4 -->
           <div class="flex justify-center">
-            <img src="img/hmo/inlife.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+            <img src="img/hmo/hmi.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
           </div>
           <!-- HMO 5 -->
           <div class="flex justify-center">
-            <img src="img/hmo/cocolife.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+            <img src="img/hmo/hppi.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
           </div>
           <!-- HMO 6 -->
           <div class="flex justify-center">
-            <img src="img/hmo/philcare.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+            <img src="img/hmo/inlife.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
           </div>
           <!-- HMO 7 -->
           <div class="flex justify-center">
-            <img src="img/hmo/kaiser.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+            <img src="img/hmo/ims.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
           </div>
           <!-- HMO 8 -->
           <div class="flex justify-center">
+            <img src="img/hmo/philcare.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+          </div>
+          <!-- HMO 9 -->
+          <div class="flex justify-center">
             <img src="img/hmo/valucare.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+          </div>
+          <!-- HMO 10 -->
+          <div class="flex justify-center">
+            <img src="img/hmo/generali.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+          </div>
+          <!-- HMO 11 -->
+          <div class="flex justify-center">
+            <img src="img/hmo/kaiser.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+          </div>
+          <!-- HMO 12 -->
+          <div class="flex justify-center">
+            <img src="img/hmo/intellicare.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+          </div>
+          <!-- HMO 13 -->
+          <div class="flex justify-center">
+            <img src="img/hmo/maxicare.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+          </div>
+          <!-- HMO 14 -->
+          <div class="flex justify-center">
+            <img src="img/hmo/Med.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+          </div>
+          <!-- HMO 15 -->
+          <div class="flex justify-center">
+            <img src="img/hmo/medasia.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
+          </div>
+          <!-- HMO 16 -->
+          <div class="flex justify-center">
+            <img src="img/hmo/amaphil.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
           </div>
         </div>
       </div>
@@ -663,6 +695,7 @@
     </div>
   </footer>
     
+<script src="js/go-top-button.js"></script>
 <!-- icons / css -->
 <script>
   const toggleBtn = document.getElementById('menu-toggle');
