--- a/careers.html
+++ b/careers.html
@@ -466,6 +466,7 @@
     </div>
   </footer>
     
+<script src="js/go-top-button.js"></script>
 <!-- icons / css -->
 <script>
   const toggleBtn = document.getElementById('menu-toggle');
