--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -368,6 +368,7 @@
     </div>
   </footer>
   
+  <script src="js/go-top-button.js"></script>
 
 <script>
   const toggleBtn = document.getElementById('menu-toggle');
