--- a/doctors.html
+++ b/doctors.html
@@ -325,6 +325,7 @@
   </footer>
 
 <!-- <script src="js/doctors.js"></script> -->
+<script src="js/go-top-button.js"></script>
 
 <!-- icons / css -->
 <script>
