--- a/facilities.html
+++ b/facilities.html
@@ -337,7 +337,7 @@
   </footer>
 
 <script src="js/floor_plan.js"></script>
-
+<script src="js/go-top-button.js"></script>
 <script>
   const toggleBtn = document.getElementById('menu-toggle');
   const menu = document.getElementById('navbar-menu');
