--- a/services.html
+++ b/services.html
@@ -523,6 +523,7 @@
     </div>
   </footer>
 
+<script src="js/go-top-button.js"></script>
 <!-- icons / css -->
 <script>
     const toggleBtn = document.getElementById('menu-toggle');
