--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -226,7 +226,8 @@
       </div>
     </div>
   </footer>
-  
+
+<script src="js/go-top-button.js"></script>
 <script>
   const toggleBtn = document.getElementById('menu-toggle');
   const menu = document.getElementById('navbar-menu');
