update doctors page

--- a/about-us.html
+++ b/about-us.html
@@ -425,7 +425,7 @@
       <div data-aos="fade-up" data-aos-delay="100">
         <h3 class="text-3xl font-semibold text-center text-[#04813b] mb-10">Accreditations <span class="text-gray-800">&</span> Certifications</h3>
         
-        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 mb-10">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 mb-10">
           <!-- HMO 1 -->
           <div class="flex justify-center">
             <img src="img/hmo/etiqa.avif" fetchpriority="low" loading="lazy" alt="HMO Partner 1" class="w-32 h-20 object-contain filter grayscale hover:grayscale-0 transform hover:scale-105 transition duration-300">
