--- a/doctors.html
+++ b/doctors.html
@@ -33,9 +33,8 @@
   <link rel="icon" href="img/logo/favicon.ico" type="image/x-icon">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
-  <script type="module" src="js/doctors-data.js"></script>
-  <!-- Then load app logic -->
-  <script type="module" src="js/doctors-app.js"></script>
+  <!-- <script type="module" src="js/doctors-data.js"></script>
+  <script type="module" src="js/doctors-app.js"></script> -->
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script type="application/ld+json">
@@ -324,7 +323,7 @@
     </div>
   </footer>
 
-<!-- <script src="js/doctors.js"></script> -->
+<script src="js/doctors.js"></script>
 <script src="js/go-top-button.js"></script>
 
 <!-- icons / css -->
