--- a/doctors.html
+++ b/doctors.html
@@ -205,12 +205,12 @@
       <div class="bg-gray-50 rounded-lg p-6 w-96 relative shadow-lg">
         <button id="closeModal" class="absolute top-2 right-2 text-gray-500 hover:text-black text-xl">&times;</button>
         <img id="modalImage" fetchpriority="high" src="" alt="doctor_img" class="w-32 h-32 rounded-full mx-auto mb-4">
-        <h2 id="modalName" class="text-xl font-semibold text-center"></h2>
-        <p id="modalSpecialty" class="text-green-600 font-medium text-center"></p>
-        <p id="modalRoom" class="mt-3 font-semibold text-center"></p>
-        <p id="modalSchedule" class="text-sm font-semibold text-gray-700 text-center"></p>
+        <h2 id="modalName" class="uppercase text-xl font-semibold text-center"></h2>
+        <p id="modalSpecialty" class="uppercase text-green-600 font-medium text-center"></p>
+        <p id="modalRoom" class="uppercase mt-3 text-sm text-gray-700 font-semibold text-center"></p>
+        <p id="modalSchedule" class="uppercase text-sm font-semibold text-gray-700 text-center"></p>
 
-        <p id="modalHmo" class="mt-3 mb-4 text-sm text-gray-700 text-center font-semibold font-lg"></p>
+        <p id="modalHmo" class="uppercase mt-3 mb-4 text-sm text-gray-700 text-center font-semibold font-lg"></p>
       </div>
     </div>
 
